fixed issues with the mobile logo resizing and siappearing on different screen sizes - fixed issue where the menu wouldnt toggle on mobile form th ehome screen

--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -245,7 +245,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .mobile-logo img {
-    width: 160px;
+    margin: auto;
 }
 
 .desktop-logo {
